<resources>
    <string name="app_name">SmartMArathonRunningApp-Project</string>
    <string name="training_plan">Training plan</string>
    <string name="monday">Monday</string>
    <string name="tuesday">tuesday\n</string>
    <string name="Tuesday">Tuesday</string>
    <string name="Sunday">Sunday</string>
    <string name="Saturday">Saturday</string>
    <string name="Friday">Friday</string>
    <string name="Thursday">Thursday</string>
    <string name="Wensday">Wensday</string>
    <string name="Wednesday">Wednesday</string>
    <string name="rest">rest</string>
    <string name="marathon_pace_6_30_per_mile">marathon pace 6\'30\'\' per mile</string>
    <string name="thursday">Thursday</string>
    <string name="general_aerobic_7_40_per_mile">general aerobic 7\'40\'\' per mile</string>
    <string name="recovery_8_per_mile">recovery 8\' per mile</string>
    <string name="medium_long_run_first_third_7_40_second_7_20_last_third_7_00_per_mile">medium/long run first third 7\'40\'\', second 7\'20\'\', last third 7\'00\'\' per mile</string>
    <string name="feedback_report">Feedback Report</string>
    <string name="twelve_week_plan">12-Week Training Plan</string>
    <string name="show_feedback">Show Feedback</string>
    <string name="got_it">GOT IT</string>
    <string name="max_hr">Max HR</string>
    <string name="avg_hr">Avg HR</string>
    <string name="effort">Effort</string>
    <string name="pace">Pace</string>
    <string name="distance">Distance</string>
    <string name="run_summary">Run Summary</string>
    <string name="current_week">Current Week</string>
    <string name="this_week_s_plan">This Week\'s Plan</string>
    <string name="test_red_scenario">Test RED Scenario</string>
    <string name="test_yellow_scenario">Test YELLOW Scenario</string>
    <string name="test_green_scenario">Test GREEN Scenario</string>
</resources>